# rusoto-ses-example

./: .env.default  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: deploy-development.yml  deploy-production.yml  unit-tests.yml
infrastructure/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/rust_function/: main.tf  output.tf  variables.tf
send_email_example/: Cargo.toml
send_email_example/src/: main.rs  send_my_email.rs
send_email_example/templates/: email_template.html
send_email_example/templates_test/: expected_html1.html
ses_mailer/: Cargo.toml
ses_mailer/src/: email.rs  lib.rs
traits/: Cargo.toml
traits/src/: lib.rs
